# geolang-ocr-toolkit

./: .gitignore  README.md  pyproject.toml
dataset/: keywords.txt
requirements/: dev.txt  prod.txt
script/: entrypoint
src/geolangocr/: __init__.py  __main__.py  cli.py  conf.py  convert.py  matcher.py  ocr.py  search.py  settings.py  utils.py
src/ocrmatcher/: __init__.py  __main__.py  cli.py  conf.py  matcher.py  ocr.py  search.py
