[build-system]
requires = [
    "setuptools==69.5.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "ocrmatcher"
version = "0.2.0"
authors = [
    {name="Lasha Gogua", email="gogualasha@gmail.com"},
]
description = "OCR toolkit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.scripts]
ocrmatcher = "ocrmatcher.cli:commands"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/prod.txt"]}

[tool.setuptools.package-data]
"ocrmatcher.tessdata" = ["*"]

# ========================
#          BLACK
# ========================
[tool.black]
line-length = 80
target-version = ["py310"]
skip-string-normalization = true


[project.urls]
Homepage = "https://github.com/Lh4cKg/ocr-toolkit.git"
Issues = "https://github.com/Lh4cKg/ocr-toolkit/issues"
